fixed up single posts on small screens as well

--- a/wp-content/themes/conifa/assets/styles/layouts/_sidebar.scss
+++ b/wp-content/themes/conifa/assets/styles/layouts/_sidebar.scss
@@ -1,9 +1,18 @@
 .team-sidebar {
-  float: right;
   padding: 24px;
   margin-left: 24px;
   background: rgba(225, 225, 225, 0.2);
-  max-width: 33%;
+  @media (max-width: $screen-xs-max) {
+    width: 66%;
+    margin: 0 auto;
+  }
+  @media (min-width: $screen-sm-min) {
+    float: right;
+    max-width: 50%;
+  }
+  @media (min-width: $screen-md-min) {
+    max-width: 33%;
+  }
 }
 .sidebar__image-wrapper {
 }
